--- a/package.json
+++ b/package.json
@@ -55,52 +55,52 @@
     "prepare": "run-p build"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.6",
-    "@emotion/styled": "^10.0.6",
-    "@libresat/frontend-components": "^0.0.1-75",
-    "@mdx-js/mdx": "^0.15.0",
-    "@mdx-js/tag": "^0.15.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "core-js": "^2.6.1",
-    "emotion": "^9.2.12",
-    "emotion-server": "^9.2.12",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.11",
+    "@libresat/frontend-components": "0.0.1-75",
+    "@mdx-js/mdx": "^1.0.19",
+    "@mdx-js/react": "^1.0.16",
+    "@mdx-js/tag": "^0.20.3",
+    "copy-webpack-plugin": "^5.0.3",
+    "core-js": "^2.6.5",
+    "emotion": "^10.0.9",
+    "emotion-server": "^10.0.9",
     "express": "^4.16.4",
-    "gatsby": "^2.0.89",
-    "gatsby-link": "^2.0.7",
-    "gatsby-mdx": "0.2.0",
-    "gatsby-plugin-emotion": "^2.0.7",
-    "gatsby-plugin-manifest": "^2.0.13",
-    "gatsby-plugin-offline": "^2.0.21",
-    "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-typescript": "^2.0.3",
-    "gatsby-source-filesystem": "^2.0.13",
-    "gatsby-transformer-yaml": "^2.1.7",
+    "gatsby": "^2.4.3",
+    "gatsby-link": "^2.1.1",
+    "gatsby-mdx": "^0.6.3",
+    "gatsby-plugin-emotion": "^4.0.6",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-offline": "^2.1.0",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-typescript": "^2.0.13",
+    "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-transformer-yaml": "^2.1.12",
     "gatsby-v2-plugin-page-transitions": "^1.0.0",
     "html-loader": "^0.5.5",
-    "markdown-loader": "^4.0.0",
-    "pm2": "^3.2.5",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-emotion": "^9.2.12",
-    "react-helmet": "^5.2.0",
+    "markdown-loader": "^5.0.0",
+    "pm2": "^3.5.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-emotion": "^10.0.0",
+    "react-helmet": "^5.2.1",
     "react-masonry-component": "^6.2.1",
     "reactjs-coverflow": "^2.1.3",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-react": "^0.87.1"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/react": "^16.7.18",
+    "@types/express": "^4.16.1",
+    "@types/react": "^16.8.17",
     "@types/react-copy-to-clipboard": "^4.2.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.5",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
     "babel-core": "^6.26.3",
-    "nodemon": "^1.18.9",
-    "npm-run-all": "^4.1.3",
-    "parcel-bundler": "^1.11.0",
-    "pkg": "^4.3.4",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
+    "nodemon": "^1.19.0",
+    "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.3",
+    "pkg": "^4.4.0",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5"
   },
   "main": "public/start.js",
   "source": "src/start.js",
