--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@mdx-js/mdx": "^1.0.19",
     "@mdx-js/react": "^1.0.16",
     "@mdx-js/tag": "^0.20.3",
+    "@types/react-helmet": "^5.0.8",
     "copy-webpack-plugin": "^5.0.3",
     "core-js": "^2.6.5",
     "emotion": "^10.0.9",
