--- a/package.json
+++ b/package.json
@@ -68,14 +68,17 @@
     "emotion-server": "^10.0.9",
     "express": "^4.16.4",
     "gatsby": "^2.4.3",
+    "gatsby-image": "^2.2.6",
     "gatsby-link": "^2.1.1",
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.2.6",
     "gatsby-plugin-typescript": "^2.0.13",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-transformer-sharp": "^2.2.3",
     "gatsby-transformer-yaml": "^2.1.12",
     "gatsby-v2-plugin-page-transitions": "^1.0.0",
     "html-loader": "^0.5.5",
