--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "emotion-server": "^10.0.9",
     "express": "^4.16.4",
     "gatsby": "^2.4.3",
+    "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.2.6",
     "gatsby-link": "^2.1.1",
     "gatsby-mdx": "^0.6.3",
