--- a/package.json
+++ b/package.json
@@ -55,57 +55,58 @@
     "prepare": "run-p build"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.11",
+    "@emotion/core": "^10.0.14",
+    "@emotion/styled": "^10.0.14",
     "@libresat/frontend-components": "0.0.1-75",
-    "@mdx-js/mdx": "^1.0.19",
-    "@mdx-js/react": "^1.0.16",
+    "@mdx-js/mdx": "^1.0.27",
+    "@mdx-js/react": "^1.0.27",
     "@mdx-js/tag": "^0.20.3",
     "@types/react-helmet": "^5.0.8",
+    "change-case": "^3.1.0",
     "copy-webpack-plugin": "^5.0.3",
     "core-js": "^2.6.5",
-    "emotion": "^10.0.9",
-    "emotion-server": "^10.0.9",
-    "express": "^4.16.4",
-    "gatsby": "^2.4.3",
+    "emotion": "^10.0.14",
+    "emotion-server": "^10.0.14",
+    "express": "^4.17.1",
+    "gatsby": "^2.13.19",
     "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.2.6",
-    "gatsby-link": "^2.1.1",
+    "gatsby-link": "^2.2.2",
     "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-emotion": "^4.0.6",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-manifest": "^2.2.3",
+    "gatsby-plugin-offline": "^2.2.3",
+    "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.6",
-    "gatsby-plugin-typescript": "^2.0.13",
-    "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-sharp": "^2.2.3",
-    "gatsby-transformer-yaml": "^2.1.12",
+    "gatsby-transformer-yaml": "^2.2.2",
     "gatsby-v2-plugin-page-transitions": "^1.0.0",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.0.0",
-    "pm2": "^3.5.0",
+    "pm2": "^3.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-emotion": "^10.0.0",
     "react-helmet": "^5.2.1",
     "react-masonry-component": "^6.2.1",
     "reactjs-coverflow": "^2.1.3",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.87.3"
   },
   "devDependencies": {
-    "@types/express": "^4.16.1",
-    "@types/react": "^16.8.17",
+    "@types/express": "^4.17.0",
+    "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-dom": "^4.3.4",
     "babel-core": "^6.26.3",
-    "nodemon": "^1.19.0",
+    "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.3",
     "pkg": "^4.4.0",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.5"
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   },
   "main": "public/start.js",
   "source": "src/start.js",
