feat(site): Blur up rest of images

--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@libresat/frontend-components": "0.0.1-75",
     "@mdx-js/mdx": "^1.0.27",
     "@mdx-js/react": "^1.0.27",
-    "@mdx-js/tag": "^0.20.3",
     "@types/react-helmet": "^5.0.8",
     "change-case": "^3.1.0",
     "copy-webpack-plugin": "^5.0.3",
@@ -79,6 +78,7 @@
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.6",
     "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-remark-images": "^3.1.5",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-sharp": "^2.2.3",
     "gatsby-transformer-yaml": "^2.2.2",
