--- a/package.json
+++ b/package.json
@@ -55,58 +55,58 @@
     "prepare": "run-p build"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.14",
-    "@emotion/styled": "^10.0.14",
+    "@emotion/core": "^10.0.17",
+    "@emotion/styled": "^10.0.17",
     "@libresat/frontend-components": "0.0.1-75",
-    "@mdx-js/mdx": "^1.0.27",
-    "@mdx-js/react": "^1.0.27",
-    "@types/react-helmet": "^5.0.8",
+    "@mdx-js/mdx": "^1.5.0",
+    "@mdx-js/react": "^1.5.0",
+    "@types/react-helmet": "^5.0.10",
     "change-case": "^3.1.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "core-js": "^2.6.5",
-    "emotion": "^10.0.14",
-    "emotion-server": "^10.0.14",
+    "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.2.1",
+    "emotion": "^10.0.17",
+    "emotion-server": "^10.0.17",
     "express": "^4.17.1",
-    "gatsby": "^2.13.19",
-    "gatsby-background-image": "^0.8.0",
-    "gatsby-image": "^2.2.6",
-    "gatsby-link": "^2.2.2",
-    "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-emotion": "^4.1.2",
-    "gatsby-plugin-manifest": "^2.2.3",
-    "gatsby-plugin-offline": "^2.2.3",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sharp": "^2.2.6",
-    "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-remark-images": "^3.1.5",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-sharp": "^2.2.3",
+    "gatsby": "^2.15.22",
+    "gatsby-background-image": "^0.8.12",
+    "gatsby-image": "^2.2.10",
+    "gatsby-link": "^2.2.15",
+    "gatsby-plugin-emotion": "^4.1.7",
+    "gatsby-plugin-manifest": "^2.2.18",
+    "gatsby-plugin-mdx": "^1.0.44",
+    "gatsby-plugin-offline": "^3.0.8",
+    "gatsby-plugin-react-helmet": "^3.1.8",
+    "gatsby-plugin-sharp": "^2.2.21",
+    "gatsby-plugin-typescript": "^2.1.9",
+    "gatsby-remark-images": "^3.1.23",
+    "gatsby-source-filesystem": "^2.1.26",
+    "gatsby-transformer-sharp": "^2.2.17",
     "gatsby-transformer-yaml": "^2.2.2",
     "gatsby-v2-plugin-page-transitions": "^1.0.0",
     "html-loader": "^0.5.5",
-    "markdown-loader": "^5.0.0",
+    "markdown-loader": "^5.1.0",
     "pm2": "^3.5.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-emotion": "^10.0.0",
     "react-helmet": "^5.2.1",
     "react-masonry-component": "^6.2.1",
     "reactjs-coverflow": "^2.1.3",
-    "semantic-ui-react": "^0.87.3"
+    "semantic-ui-react": "^0.88.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
-    "@types/react": "^16.8.23",
+    "@types/express": "^4.17.1",
+    "@types/react": "^16.9.2",
     "@types/react-copy-to-clipboard": "^4.2.6",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.4",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^4.3.5",
     "babel-core": "^6.26.3",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.2",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.3",
     "pkg": "^4.4.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.3"
   },
   "main": "public/start.js",
   "source": "./src/start.js",
