--- a/package.json
+++ b/package.json
@@ -20,54 +20,54 @@
   "author": "Felix Pojtinger <felix@pojtinger.com>",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@emotion/core": "^10.0.20",
-    "@emotion/styled": "^10.0.17",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "@libresat/frontend-components": "0.0.1-75",
-    "@mdx-js/mdx": "^1.5.0",
-    "@mdx-js/react": "^1.5.0",
-    "@types/react-helmet": "^5.0.11",
-    "change-case": "^3.1.0",
+    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/react": "^1.5.5",
+    "@types/react-helmet": "^5.0.15",
+    "change-case": "^4.1.1",
     "copy-webpack-plugin": "^5.1.1",
-    "core-js": "^3.2.1",
-    "emotion": "^10.0.17",
-    "emotion-server": "^10.0.17",
+    "core-js": "^3.6.4",
+    "emotion": "^10.0.27",
+    "emotion-server": "^10.0.27",
     "express": "^4.17.1",
-    "gatsby": "^2.18.17",
-    "gatsby-background-image": "^0.8.15",
-    "gatsby-image": "^2.2.24",
-    "gatsby-link": "^2.2.18",
-    "gatsby-plugin-emotion": "^4.1.9",
-    "gatsby-plugin-manifest": "^2.2.20",
-    "gatsby-plugin-mdx": "^1.0.47",
-    "gatsby-plugin-offline": "^3.0.11",
-    "gatsby-plugin-react-helmet": "^3.1.10",
-    "gatsby-plugin-sharp": "^2.2.28",
-    "gatsby-plugin-typescript": "^2.1.11",
-    "gatsby-remark-images": "^3.1.25",
-    "gatsby-source-filesystem": "^2.1.29",
-    "gatsby-transformer-sharp": "^2.2.20",
-    "gatsby-transformer-yaml": "^2.2.12",
+    "gatsby": "^2.19.1",
+    "gatsby-background-image": "^0.9.12",
+    "gatsby-image": "^2.2.39",
+    "gatsby-link": "^2.2.28",
+    "gatsby-plugin-emotion": "^4.1.21",
+    "gatsby-plugin-manifest": "^2.2.37",
+    "gatsby-plugin-mdx": "^1.0.67",
+    "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sharp": "^2.4.0",
+    "gatsby-plugin-typescript": "^2.1.26",
+    "gatsby-remark-images": "^3.1.42",
+    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-sharp": "^2.3.13",
+    "gatsby-transformer-yaml": "^2.2.23",
     "gatsby-v2-plugin-page-transitions": "^1.0.0",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.1.0",
-    "pm2": "^3.5.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "pm2": "^4.2.3",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-emotion": "^10.0.0",
     "react-helmet": "^5.2.1",
     "react-masonry-component": "^6.2.1",
     "reactjs-coverflow": "^2.1.3",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.1",
-    "@types/react": "^16.9.5",
+    "@types/express": "^4.17.2",
+    "@types/react": "^16.9.18",
     "@types/react-copy-to-clipboard": "^4.3.0",
-    "@types/react-dom": "^16.9.1",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "babel-core": "^6.26.3",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.3",
-    "pkg": "^4.4.0"
+    "pkg": "^4.4.2",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   }
 }
