--- a/package.json
+++ b/package.json
@@ -20,54 +20,55 @@
   "author": "Felicitas Pojtinger <felicitas@pojtinger.com>",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@libresat/frontend-components": "0.0.1-75",
-    "@mdx-js/mdx": "^1.5.7",
-    "@mdx-js/react": "^1.5.7",
-    "@types/react-helmet": "^5.0.15",
-    "change-case": "^4.1.1",
-    "copy-webpack-plugin": "^5.1.1",
-    "core-js": "^3.6.4",
-    "emotion": "^10.0.27",
-    "emotion-server": "^10.0.27",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@types/react-helmet": "^6.1.0",
+    "change-case": "^4.1.2",
+    "copy-webpack-plugin": "^7.0.0",
+    "core-js": "^3.8.3",
+    "emotion": "^11.0.0",
+    "emotion-server": "^11.0.0",
     "express": "^4.17.1",
-    "gatsby": "^2.19.32",
-    "gatsby-background-image": "^0.9.19",
-    "gatsby-image": "^2.2.43",
-    "gatsby-link": "^2.2.30",
-    "gatsby-plugin-emotion": "^4.1.24",
-    "gatsby-plugin-manifest": "^2.2.44",
-    "gatsby-plugin-mdx": "^1.0.77",
-    "gatsby-plugin-offline": "^3.0.37",
-    "gatsby-plugin-react-helmet": "^3.1.23",
-    "gatsby-plugin-sharp": "^2.4.7",
-    "gatsby-plugin-typescript": "^2.2.2",
-    "gatsby-remark-images": "^3.1.46",
-    "gatsby-source-filesystem": "^2.1.50",
-    "gatsby-transformer-sharp": "^2.3.17",
-    "gatsby-transformer-yaml": "^2.2.26",
+    "gatsby": "^2.32.3",
+    "gatsby-background-image": "^1.4.1",
+    "gatsby-image": "^2.11.0",
+    "gatsby-link": "^2.11.0",
+    "gatsby-plugin-emotion": "^5.4.0",
+    "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-mdx": "^1.10.0",
+    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-typescript": "^2.12.0",
+    "gatsby-remark-images": "^3.11.0",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-transformer-yaml": "^2.11.0",
     "gatsby-v2-plugin-page-transitions": "^1.0.0",
-    "html-loader": "^0.5.5",
-    "markdown-loader": "^5.1.0",
-    "pm2": "^4.2.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "html-loader": "^1.3.2",
+    "markdown-loader": "^6.0.0",
+    "pm2": "^4.5.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-emotion": "^10.0.0",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.1.0",
     "react-masonry-component": "^6.2.1",
     "reactjs-coverflow": "^2.1.3",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.3",
-    "@types/react": "^16.9.23",
-    "@types/react-copy-to-clipboard": "^4.3.0",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/express": "^4.17.11",
+    "@types/react": "^17.0.2",
+    "@types/react-copy-to-clipboard": "^5.0.0",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-router-dom": "^5.1.7",
     "babel-core": "^6.26.3",
-    "pkg": "^4.4.4",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.8.3"
+    "pkg": "^4.4.9",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
