--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,18 @@
-baseURL: "http://example.org/"
-languageCode: "en-us"
-title: "My New Hugo Site"
+baseURL: https://felix.pojtinger.com/
+languageCode: en-us
+title: Felix Pojtinger
+description: Felix Pojtinger is a software engineer focused on Go and the web.
+keywords:
+  - Felix
+  - Pojtinger
+  - pojntfx
+  - Go
+  - Web
+  - STFS
+  - bofied
+  - liwasc
+  - Cluster Platform
+  - Open Source
+  - Free Software
+copyright: © 2022 Felix Pojtinger
+source: https://github.com/pojntfx/personal-site
