--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,13 +1,13 @@
-person:
-  name: Felix Pojtinger 🌈 ✨
-  img: https://github.com/pojntfx.png
-  pronouns: they/she
-  description: Go & Web Developer
-  cv: https://docs.google.com/document/d/1rUE09TCqLs2_W5rBzC2dTvi2mzf7HM4QYhQxhpD5m2w/edit?usp=sharing
-  contact:
-    twitter: https://twitter.com/pojntfx
-    github: https://github.com/pojntfx
-    twitch: https://www.twitch.tv/pojntfx
-    matrix: https://matrix.to/#/@pojntfx:matrix.org
-    signal: https://signal.me/#p/+4915233842326
-    mail: mailto:felix@pojtinger.com
+name: Felix Pojtinger 🌈 ✨
+img: https://github.com/pojntfx.png
+imgAlt: Profile picture of Felix Pojtinger
+pronouns: they/she
+description: Go & Web Developer
+cv: https://docs.google.com/document/d/1rUE09TCqLs2_W5rBzC2dTvi2mzf7HM4QYhQxhpD5m2w/edit?usp=sharing
+contact:
+  twitter: https://twitter.com/pojntfx
+  github: https://github.com/pojntfx
+  twitch: https://www.twitch.tv/pojntfx
+  matrix: https://matrix.to/#/@pojntfx:matrix.org
+  signal: https://signal.me/#p/+4915233842326
+  mail: mailto:felix@pojtinger.com
