--- a/data/person.yaml
+++ b/data/person.yaml
@@ -6,6 +6,7 @@ description: Go & Web Developer
 cv: https://docs.google.com/document/d/1rUE09TCqLs2_W5rBzC2dTvi2mzf7HM4QYhQxhpD5m2w/edit?usp=sharing
 contact:
   twitter: https://twitter.com/pojntfx
+  twitterFollow: https://twitter.com/intent/user?screen_name=pojntfx
   github: https://github.com/pojntfx
   twitch: https://www.twitch.tv/pojntfx
   matrix: https://matrix.to/#/@pojntfx:matrix.org
