feat: Add API handler and reverse proxy for serverless functions

--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -28,6 +28,7 @@
     - pojntfx/dibs
 - title: Uni Notes
   projects:
+    - pojntfx/uni-supply-chain-paper
     - pojntfx/uni-netpractice-notes
     - pojntfx/uni-webtopics-notes
     - pojntfx/uni-sciwriting-notes
