--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
         {
           "key": "Access-Control-Allow-Methods",
           "value": "GET,OPTIONS"
-        }
+        },
+        { "key": "Cache-Control", "value": "s-maxage=900" }
       ]
     }
   ]
