--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "url": "https://github.com/pojntfx/personal-site/issues"
   },
   "homepage": "https://github.com/pojntfx/personal-site#readme",
-  "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^9.1.0",
-    "tailwindcss": "^3.0.18"
+  "dependencies": {
+    "@patternfly/patternfly": "^4.171.1"
   }
 }
