--- a/config.yaml
+++ b/config.yaml
@@ -3,22 +3,23 @@ languageCode: en-us
 title: Felix Pojtinger
 relativeURLs: true
 params:
-  author: Felix Pojtinger
-  description: Felix Pojtinger is a software engineer focused on Go and the web.
-  keywords:
-    - Felix
-    - Pojtinger
-    - pojntfx
-    - Go
-    - Web
-    - STFS
-    - bofied
-    - liwasc
-    - Cluster Platform
-    - Open Source
-    - Free Software
-  copyright: © 2022 Felix Pojtinger
-  source: https://github.com/pojntfx/personal-site
+  meta:
+    author: Felix Pojtinger
+    description: Felix Pojtinger is a software engineer focused on Go and the web.
+    keywords:
+      - Felix
+      - Pojtinger
+      - Felix Pojtinger
+      - pojntfx
+      - Go
+      - Web
+      - STFS
+      - bofied
+      - liwasc
+      - Cluster Platform
+      - Open Source
+      - Free Software
+    source: https://github.com/pojntfx/personal-site
   comments:
     repo: pojntfx/personal-site
     repoID: MDEwOlJlcG9zaXRvcnkyMjk0NTAyMDE=
@@ -28,15 +29,3 @@ params:
     reactionsEnabled: 1
     emitMetadata: 1
     theme: preferred_color_scheme
-  commits:
-    githubAPI: https://api.github.com
-    githubHTML: https://github.com
-    githubUser: pojntfx
-    githubLabel: "@pojntfx"
-  livestreaming:
-    twitchUser: pojntfx
-    twitchLabel: "@pojntfx"
-    youtubeUser: UC0-pwQXvswpwjMVV_jdFLzg
-  feeds:
-    twitterUser: pojntfx
-    twitterLabel: "@pojntfx"
