--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,8 +1,8 @@
-name: Felicitas Pojtinger 🌈 ✨
-pronouns: they/she
+name: Felicitas Pojtinger 🏳️‍⚧️ 💙💛
+pronouns: she/they
 description: Go & Web Developer
 img: https://github.com/pojntfx.png
-cv: https://docs.google.com/document/d/1rUE09TCqLs2_W5rBzC2dTvi2mzf7HM4QYhQxhpD5m2w/edit?usp=sharing
+cv: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
 matrix: "@pojntfx:matrix.org"
 signal: "+4915233842326"
 mail: "felicitas@pojtinger.com"
