--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/pojntfx/personal-site.git"
   },
-  "author": "Felix Pojtinger <felix@pojtinger.com>",
+  "author": "Felicitas Pojtinger <felicitas@pojtinger.com>",
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/pojntfx/personal-site/issues"
