feat: Add contact menu

--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,4 +1,4 @@
-name: Felicitas Pojtinger 🏳️‍⚧️ 💙💛
+name: Felicitas Pojtinger 🏳️‍🌈 💙💛
 pronouns: she/they
 description: Go & Web Developer
 img: https://github.com/pojntfx.png
