--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,5 +1,5 @@
 name: Felicitas Pojtinger 🏳️‍🌈 💙💛
-pronouns: she/they
+pronouns: she/her
 description: Go & Web Developer
 img: https://github.com/pojntfx.png
 cv: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
