feat: Add socials instead of just contact section

--- a/data/person.yaml
+++ b/data/person.yaml
@@ -3,10 +3,13 @@ pronouns: she/her
 description: Go & Web Developer
 img: https://github.com/pojntfx.png
 cv: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
-matrix: "@pojntfx:matrix.org"
-signal: "+4915233842326"
-mail: "felicitas@pojtinger.com"
 youtube: "UC0-pwQXvswpwjMVV_jdFLzg"
 twitch: pojntfx
 github: pojntfx
 twitter: pojntfx
+instagram: pojntfx
+mastodon: https://mastodon.social/@pojntfx
+matrix: "@pojntfx:matrix.org"
+signal: "+4915233842326"
+phone: "+4915233842326"
+mail: "felicitas@pojtinger.com"
