--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,6 +1,6 @@
-name: Felicitas Pojtinger 🏳️‍🌈 💙💛
-pronouns: she/her
-description: Go & Web Developer
+name: Felicitas Pojtinger 💐
+pronouns: she/her 🏳️‍🌈
+description: 👩‍💻 Go & JS Developer
 img: https://github.com/pojntfx.png
 cv: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
 youtube: "UC0-pwQXvswpwjMVV_jdFLzg"
