feat: Refresh design for Autumn 2022, integrate suggestions from keystoregaen

--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,7 @@ params:
       - Open Source
       - Free Software
     source: https://github.com/pojntfx/personal-site
+    streaming: false
   comments:
     repo: pojntfx/personal-site
     repoID: MDEwOlJlcG9zaXRvcnkyMjk0NTAyMDE=
