--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,4 +1,4 @@
-name: Felicitas Pojtinger 💐
+name: Felicitas Pojtinger 🧲
 pronouns: she/her 🏳️‍🌈
 description: 👩‍💻 Go & JS Developer
 img: https://github.com/pojntfx.png
