refactor: Use & parse mastodon ID instead of URL in metadata

--- a/data/person.yaml
+++ b/data/person.yaml
@@ -8,7 +8,7 @@ twitch: pojntfx
 github: pojntfx
 twitter: pojntfx
 instagram: pojntfx
-mastodon: https://mastodon.social/@pojntfx
+mastodon: "@pojntfx@mastodon.social"
 matrix: "@pojntfx:matrix.org"
 signal: "+4915233842326"
 phone: "+4915233842326"
