refactor: Add winter walpaper and update personal info

--- a/data/person.yaml
+++ b/data/person.yaml
@@ -1,5 +1,5 @@
-name: Felicitas Pojtinger 🧲
-pronouns: she/her 🏳️‍🌈
+name: Felicitas Pojtinger 🌨️
+pronouns: she/her
 description: 👩‍💻 Go & JS Developer
 img: https://github.com/pojntfx.png
 cv: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
