--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/pojntfx/personal-site#readme",
   "dependencies": {
     "@fontsource/lato": "^4.5.1",
-    "@patternfly/patternfly": "^4.171.1"
+    "@patternfly/patternfly": "^4.171.1",
+    "magic-snowflakes": "^6.0.1"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
