feat: Add support for fireworks in preparation for new year's eve, render effects behind UI elements in all cases

--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,7 @@ params:
     source: https://github.com/pojntfx/personal-site
     streaming: false
     snowfall: true
+    fireworks: false
   comments:
     repo: pojntfx/personal-site
     repoID: MDEwOlJlcG9zaXRvcnkyMjk0NTAyMDE=
