--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pojntfx/personal-site#readme",
   "dependencies": {
+    "@fireworks-js/web": "^2.10.0",
     "@fontsource/lato": "^4.5.1",
     "@patternfly/patternfly": "^4.171.1",
     "magic-snowflakes": "^6.0.1"
