--- a/config.yaml
+++ b/config.yaml
@@ -21,8 +21,8 @@ params:
       - Free Software
     source: https://github.com/pojntfx/personal-site
     streaming: false
-    snowfall: false
-    fireworks: true
+    snowfall: true
+    fireworks: false
   comments:
     repo: pojntfx/personal-site
     repoID: MDEwOlJlcG9zaXRvcnkyMjk0NTAyMDE=
