--- a/config.yaml
+++ b/config.yaml
@@ -32,3 +32,8 @@ params:
     reactionsEnabled: 1
     emitMetadata: 1
     theme: light
+  navigation:
+    navbar:
+      - title: CV
+        icon: fas fa-book
+        link: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
