--- a/data/links.yaml
+++ b/data/links.yaml
@@ -4,6 +4,7 @@ navbar:
   - title: CV
     icon: fas fa-book
     link: https://docs.google.com/document/d/1pT-rogZHC3DVQ41mTFAqCOAcMhh4PDolzqSgqNN2JWk/edit?usp=sharing
+    newTab: true
 cta:
   title: Follow on Mastodon
   icon: fas fa-plus-circle
