--- a/data/links.yaml
+++ b/data/links.yaml
@@ -14,11 +14,15 @@ socials:
     link: https://twitter.com/pojntfx
   - title: Instagram
     link: https://www.instagram.com/pojntfx/
+  - title: LinkedIn
+    link: https://www.linkedin.com/in/pojntfx/
   - separator: true
   - title: Matrix
     link: https://matrix.to/#/@pojntfx:matrix.org
   - title: Signal
     link: https://signal.me/#p/+4915233842326
+  - title: Discord
+    link: https://discord.com/users/pojntfx#6418
   - separator: true
   - title: Phone
     link: tel:+4915233842326
