--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -98,10 +98,12 @@
       background: var(--pf-global--palette--light-blue-600)
 - title: Websites
   projects:
-    - slug: pojntfx/personal-site
+    - slug: pojntfx/felicitas.pojtinger.com
       background: var(--pf-global--palette--gold-600)
-    - slug: pojntfx/family-site
+    - slug: pojntfx/pojtinger.com
       background: var(--pf-global--palette--cyan-600)
+    - slug: morniteaque/yaraamendiares.eu
+      background: var(--pf-global--palette--purple-600)
     - slug: pojntfx/illustrierte-website
       background: var(--pf-global--palette--orange-600)
     - slug: pojntfx/physio-dani.de
