refactor: Use new repo name

--- a/data/integrations.yaml
+++ b/data/integrations.yaml
@@ -1,5 +1,5 @@
 giscus:
-  repo: pojntfx/personal-site
+  repo: pojntfx/felicitas.pojtinger.com
   repoID: MDEwOlJlcG9zaXRvcnkyMjk0NTAyMDE=
   category: Announcements
   categoryID: DIC_kwDODa0h2c4CAeR2
