--- a/data/site.yaml
+++ b/data/site.yaml
@@ -13,4 +13,4 @@ keywords:
   - Cluster Platform
   - Open Source
   - Free Software
-source: https://github.com/pojntfx/personal-site
+source: https://github.com/pojntfx/felicitas.pojtinger.com
