--- a/data/links.yaml
+++ b/data/links.yaml
@@ -10,6 +10,8 @@ cta:
   icon: fas fa-plus-circle
   link: https://mastodon.social/@pojntfx
 socials:
+  - title: Bluesky
+    link: https://bsky.app/profile/felicitas.dev
   - title: Twitter
     link: https://twitter.com/pojntfx
   - title: Instagram
