fix: Use new Bluesky handle

--- a/data/links.yaml
+++ b/data/links.yaml
@@ -11,7 +11,7 @@ cta:
   link: https://mastodon.social/@pojntfx
 socials:
   - title: Bluesky
-    link: https://bsky.app/profile/felicitas.dev
+    link: https://bsky.app/profile/felicitas.pojtinger.com
   - title: Twitter
     link: https://twitter.com/pojntfx
   - title: Instagram
